--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,15 @@ features = ["backtrace"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.windows]
-version = "0.51.1"
+version = "0.52.0"
 features = [
     "Win32_Graphics_DirectWrite",
     "Win32_Foundation",
     "Win32_Graphics_Gdi",
+    "Win32_Graphics_Direct2D_Common",
+    "Foundation_Numerics",
+    "Win32_Graphics_Dxgi_Common",
+    "Win32_System_LibraryLoader",
+    "Win32_Graphics_Gdi",
+    "Win32_UI_WindowsAndMessaging"
 ]
