--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ features = ["backtrace"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.windows]
-version = "0.52.0"
+version = "*"
 features = [
     "Win32_Graphics_DirectWrite",
     "Win32_Foundation",
